--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,12 @@ dependencies {
     ])
     compile 'org.spongepowered:mixin:0.7.10-SNAPSHOT'
     compile 'net.minecraft:launchwrapper:1.11'
+
     //runtime 'org.apache.logging.log4j:log4j-slf4j-impl:2.8.1'
+}
+
+configurations {
+    compile.exclude module: 'lwjgl'
 }
 
 task downloadZipFile(type: Download) {
@@ -79,8 +84,8 @@ task prepareWorkspace(type: GradleBuild) {
 
 task generateRunScript() {
     doLast {
-        new File("$buildDir/libs/startServer.sh").text = """java -Dio.netty.epollBugWorkaround=true -Dscrolls.mode=PROD -Dscrolls.node.id=test-server -cp "turtles-1.0-SNAPSHOT.jar:Server.jar:lib/*:cfg/:" org.wakingstones.turtles.core.Main"""
-        new File("$buildDir/libs/startServer.bat").text = """java -Dio.netty.epollBugWorkaround=true -Dscrolls.mode=PROD -Dscrolls.node.id=test-server -cp "turtles-1.0-SNAPSHOT.jar;Server.jar;lib/*;cfg/;" org.wakingstones.turtles.core.Main"""
+        new File("$buildDir/libs/startServer.sh").text = """java -Dio.netty.epollBugWorkaround=true -Dscrolls.mode=PROD -Dscrolls.node.id=test-server -jar turtles-${version}.jar"""
+        new File("$buildDir/libs/startServer.bat").text = """java -Dio.netty.epollBugWorkaround=true -Dscrolls.mode=PROD -Dscrolls.node.id=test-server -jar turtles-${version}.jar"""
     }
 }
 
