Add challenge support Only works if both challenge each other within 5 minutes

--- a/build.gradle
+++ b/build.gradle
@@ -92,7 +92,7 @@ task generateRunScript() {
 jar {
     manifest {
         attributes(
-                "Class-Path": "Server.jar lib/ cfg/",
+                "Class-Path": "Server.jar lib/* cfg/*",
                 "Main-Class": "org.wakingstones.turtles.core.Main"
         )
     }
