--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java-library'
-    id "de.undercouch.download" version "3.4.3"
+    id "de.undercouch.download" version "5.0.4"
     id "com.github.johnrengelman.shadow" version "5.2.0"
 }
 
@@ -48,26 +48,31 @@ configurations {
 task downloadZipFile(type: Download) {
     src 'https://download.scrolls.com/callersbane/server/CallersBane-Server-2.0.1.zip'
     dest new File(buildDir, 'server.zip')
+
 }
 
 task unzip(type: Copy) {
+    dependsOn(downloadZipFile)
     from zipTree(downloadZipFile.dest)
     into "${buildDir}/server"
 }
 
 task moveJar(type: Copy) {
+    dependsOn(unzip)
     from "${buildDir}/server/CallersBane-Server/Server.jar"
     into "lib"
     rename "Server.jar", "callersbane-server.jar"
 }
 
 task copyLibs(type: Copy) {
+    dependsOn(unzip)
     from "${buildDir}/server/CallersBane-Server/lib/"
     include "*.jar"
     into "lib"
 }
 
 task cleanup(type: Delete) {
+    dependsOn(copyLibs, moveJar)
     delete "${buildDir}/server", "${buildDir}/server.zip"
 }
 
