--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,23 +11,59 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
+      - uses: actions/checkout@v2
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
 
-    - name: Prepare
-      run: ./gradlew prepareWorkspace
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
-    - name: Build
-      run: ./gradlew build
+      - name: Prepare
+        run: ./gradlew prepareWorkspace
 
-    - name: Generate archive
-      uses: actions/upload-artifact@v1
-      with:
-        name: Results
-        path: build/libs/
+      - name: Build
+        run: ./gradlew build
+
+      - name: Generate archive
+        uses: actions/upload-artifact@v1
+        with:
+          name: Results
+          path: build/libs/
+
+
+  build-docker:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Correct env
+        run:
+          echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+
+      - name: Check out code into the proper directory
+        uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build container
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ env.REPO }}:latest
+          platforms: linux/amd64,linux/arm64
