--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       DB_USER: scrolls
       DB_PASSWORD: scrolls
     volumes:
-      - "scrolls:/scrolls"
+      - "scrolls:/scrolls/download"
     ports:
       - "8081:8081"
       - "8082:8082"
