--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,4 +71,4 @@ jobs:
     steps:
       - name: Deploy
         run:
-          curl -X POST --insecure ${{ secrets.POST_URL }}
+          curl -X POST --insecure ${{ secrets.DEPLOYMENT_URL }}
